k8s/04-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-api
  namespace: banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banking-api
  template:
    metadata:
      labels:
        app: banking-api
    spec:
      containers:
      - name: api
        # استبدل هذا بالصورة الخاصة بك
        image: ahmedrabie222000/api:v3.0 
        ports:
        - containerPort: 3000 # نفس المنفذ اللي في الـ Service والـ Nginx عندك
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
