k8s/06-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service # هذا هو الـ Headless Service
  namespace: banking
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None # هنا يكمن السر، كونه None يجعله Headless
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-read-service # خدمة للقراءة فقط (توزع الحمل بين البودين)
  namespace: banking
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: banking-api-service # خدمة الـ API
  namespace: banking
spec:
  selector:
    app: banking-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: banking-dashboard-service # خدمة الواجهة الأمامية
  namespace: banking
spec:
  selector:
    app: banking-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
