k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: banking.local
      http:
        paths:
          # توجيه مسارات الـ API (accounts, stats, transactions)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: banking-api-service
                port:
                  number: 3000
          # توجيه مسارات الـ Health & Ready
          - path: /health
            pathType: Exact
            backend:
              service:
                name: banking-api-service
                port:
                  number: 3000
          # توجيه أي حاجة تانية للداشبورد (الواجهة)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-dashboard-service
                port:
                  number: 80
